# lvv

./: Cargo.toml
src/: lib.rs
src/cache/: cache_embeddings.rs  mod.rs
src/db/: mod.rs  vector_database.rs
src/inference/: embedding_model.rs  mod.rs
src/inference/openai/: batch_embedding.rs  mod.rs
src/intake/: dataset.rs  mod.rs
src/jobs/: job.rs  job_queue.rs  mod.rs
