[package]
name = "lvv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-openai = "0.30.1"
chrono = { version = "0.4.42", features = ["serde"] }
derive_builder = "0.20.2"
dotenvy = "0.15.7"
llm = "1.3.4"
qdrant-client = { version = "1.15.0", features = ["serde"] }
rand = "0.9.2"
schemars = { version = "1.0.4", features = ["chrono04"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.8"
uuid = "1.18.1"
